--- a/src/main/resources/ca/concordia/index.fxml
+++ b/src/main/resources/ca/concordia/index.fxml
@@ -3,11 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="610.0" maxWidth="1222.0" minHeight="610.0" minWidth="1222.0" prefHeight="610.0" prefWidth="1222.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.concordia.UIController">
+<VBox alignment="CENTER" maxHeight="610.0" maxWidth="1222.0" minHeight="610.0" minWidth="1222.0" prefHeight="610.0" prefWidth="1222.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.concordia.UI.UIController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
