--- a/src/main/resources/ca/concordia/index.fxml
+++ b/src/main/resources/ca/concordia/index.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="610.0" maxWidth="1222.0" minHeight="610.0" minWidth="1222.0" prefHeight="610.0" prefWidth="1222.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.concordia.UI.UIController">
+<VBox alignment="CENTER" maxHeight="610.0" minHeight="610.0" minWidth="1400.0" prefHeight="610.0" prefWidth="1400.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.concordia.UI.UIController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
@@ -23,8 +26,18 @@
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Label text="Flight Type" />
+                  <ComboBox fx:id="flightType" minWidth="175.0" prefWidth="175.0">
+                     <VBox.margin>
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
+                     </VBox.margin>
+                  </ComboBox>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="Flight Number" />
+                  <TextField fx:id="flightNumber" minWidth="125.0">
                      <VBox.margin>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                      </VBox.margin>
@@ -33,52 +46,56 @@
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Label text="Source" />
+                  <ComboBox fx:id="sourceInput" minWidth="100.0" prefWidth="150.0">
                      <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
                      </VBox.margin>
-                  </TextField>
+                  </ComboBox>
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Label text="Destination" />
+                  <ComboBox fx:id="destinationInput" minWidth="100.0" prefWidth="150.0">
                      <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
                      </VBox.margin>
-                  </TextField>
+                  </ComboBox>
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Label text="Scheduled Depart" />
+                  <DatePicker fx:id="scheduledDepart" minWidth="115.0" prefWidth="100.0">
                      <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
                      </VBox.margin>
-                  </TextField>
+                  </DatePicker>
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Label text="Actual Arrival" />
+                  <DatePicker fx:id="scheduledArrival" minWidth="115.0">
                      <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
                      </VBox.margin>
-                  </TextField>
+                  </DatePicker>
                </children>
             </VBox>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="300.0">
                <children>
-                  <Label text="Label" />
-                  <TextField>
+                  <Button mnemonicParsing="false" onAction="#addFlight" text="Add Flight" />
+                  <Label fx:id="addStatus">
                      <VBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="9.0" left="9.0" right="9.0" top="9.0" />
                      </VBox.margin>
-                  </TextField>
+                  </Label>
                </children>
             </VBox>
          </children>
